<resources>
    <string name="app_name">Quran-um-Majid</string>
    <string name="title_activity_main">Qur\'ān-um-Majīd</string>
    <string name="title_activity_pencarian">Hasil Pencarian</string>
    <string name="title_activity_reading"></string>

    <string name="tampilkan_terjemah">Tampilkan Terjemah</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Cari</string>
    <string name="action_goto">Menuju</string>

    <string name="search_hint">Pencarian</string>
    <string name="search_type_hint">Pilih jenis pencarian</string>
    <string-array name="search_type">
        <item>Ayat dan Terjemah</item>
        <item>Tafsir</item>
    </string-array>

    <string name="format_surat"><b>Surat %s</b></string>
    <string name="format_ayat">Ayat %d</string>
    <string name="format_info_makkiyah">Makiyyah - %d Ayat</string>
    <string name="format_info_madaniyah">Madaniyah - %d Ayat</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="menu_salin_ayat">Salin Ayat</string>
    <string name="menu_salin_terjemah">Salin terjemah</string>
    <string name="menu_letakkan_bookmark">Letakkan bookmark</string>


    <string name="pref_ukuran_teks_ayat">Ukuran teks ayat</string>
    <string name="pref_ukuran_teks_ayat_dialog">Judul</string>
    <string name="title_activity_pengaturan">Pengaturan</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_enable_sync">Aktifkan Sinkronisasi</string>
    <string name="pref_description_enable_sync">Melakukan pembaharuan revisi setiap membuka aplikasi
    </string>
    <string name="pref_title_enable_reporting">Aktifkan Laporan</string>
    <string name="pref_description_enable_reporting">Melakukan laporan kepada developer ketika terjadi kesalahan.
    </string>

    <string name="pref_title_arabic_font_size">Ukuran Teks Arab</string>
    <string name="pref_title_alphabet_font_size">Ukuran Teks Alfabet</string>
    <string name="menu_hapus_bookmark">Hapus Bookmark</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>

    <string-array name="pref_font_size">
        <item>Kecil</item>
        <item>Normal</item>
        <item>Besar</item>
        <item>Sangat Besar</item>
    </string-array>

    <string-array name="pref_font_size_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

</resources>
